# squad

./: .gitignore
backend/: .env.example  .gitignore  Cargo.toml
backend/src/: agent_registry.rs  agent_ws.rs  lib.rs  main.rs  models.rs  rcon.rs
backend/tests/: agent_routes.rs  file_bridge.rs  server_routes.rs
docs/superpowers/specs/: 2026-04-07-squad-realtime-log-pipeline-design.md
server-agent/: Cargo.toml
server-agent/src/: config.rs  file_service.rs  file_watcher.rs  lib.rs  log_parser.rs  log_tail.rs  main.rs  models.rs  path_policy.rs  runtime.rs  transport.rs
server-agent/tests/: file_service.rs  log_parser.rs  log_tail.rs  path_policy.rs  runtime_file_commands.rs  transport_handshake.rs
web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  index.css
web/src/components/: Icon.jsx
web/src/data/: defaultDashboard.js
web/src/services/: dashboardApi.js  dashboardApi.test.js  serverManagementView.js  serverManagementView.test.js  serverWorkbench.js  serverWorkbench.test.js
