[package]
name = "server-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures = "0.3"
notify = "6"
regex = "1"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
